@@ -5,12 +5,14 @@
 # Debian-specific script to upgrade the database between releases
 # Roland Mas <lolando@debian.org>
 
-use DBI ;
 use strict ;
 use diagnostics ;
 
-use vars qw/$dbh @reqlist/ ;
+use DBI ;
+use MIME::Base64 ;
+use HTML::Entities ;
 
+use vars qw/$dbh @reqlist/ ;
 use vars qw/$sys_default_domain $sys_cvs_host $sys_download_host
     $sys_shell_host $sys_users_host $sys_docs_host $sys_lists_host
     $sys_dns1_host $sys_dns2_host $FTPINCOMING_DIR $FTPFILES_DIR
@@ -32,7 +34,7 @@ debug "Do not worry unless told otherwise." ;
 
 &db_connect ;
 
-debug "Connected to the database OK." ;
+# debug "Connected to the database OK." ;
 
 $dbh->{AutoCommit} = 0;
 $dbh->{RaiseError} = 1;
@@ -51,13 +53,13 @@ eval {
     # Create Sourceforge database
 
     if ($array [0] == 0) {
+	# Installing SF 2.6 from scratch
 	$action = "installation" ;
 	debug "Creating initial Sourceforge database from files." ;
 
+	&create_metadata_table ("2.5-9999+just+before+2+6") ;
+
 	my @filelist = qw{ /usr/lib/sourceforge/db/sf-2.6-complete.sql } ;
-#	my @filelist = qw{ /usr/lib/sourceforge/db/SourceForge.sql
-#			       /usr/lib/sourceforge/db/trove_defaults.sql
-#			       /usr/lib/sourceforge/db/init-extra.sql } ;
 	# TODO: user_rating.sql
 			      
 	foreach my $file (@filelist) {
@@ -75,7 +77,6 @@ eval {
 	@reqlist = () ;
 
 	debug "Adding local data." ;
-
 	
 	do "/etc/sourceforge/local.pl" or die "Cannot read /etc/sourceforge/local.pl" ;
 
@@ -89,66 +90,13 @@ eval {
 	$shellbox = $domain_name ;
 	$noreplymail="noreply\@$domain_name" ;
 	$date = time () ;
-	
-# 	@reqlist = (
-#DONE 	    "INSERT INTO groups (group_id, group_name, homepage, is_public, status, unix_group_name, unix_box,
-#			http_domain, short_description, cvs_box, license, register_purpose,
-#			license_other, register_time, rand_hash, use_mail, use_survey,
-#			use_forum, use_pm, use_cvs, use_news, 
-#			type, use_docman, 
-#			new_task_address, send_all_tasks,
-#			use_pm_depend_box)
-# 	    VALUES (1, 'Site Admin', '$domain_name/admin/', 1, 'A', 'siteadmin', 'shell1', 
-#			NULL, NULL, 'cvs1', 'website', NULL,
-#			NULL, 0, 0, 1, 0,
-#			0, 0, 0, 1,
-#			1, 1,
-#			'', 0,
-#			0)",
-#TODO       "UPDATE groups SET homepage = '$domain_name/admin/' where group_id = '1'",
-#DONE 	    "INSERT INTO groups (group_id, group_name, homepage, is_public, status, unix_group_name, unix_box,
-#			http_domain, short_description, cvs_box, license, register_purpose,
-#			license_other, register_time, rand_hash, use_mail, use_survey,
-#			use_forum, use_pm, use_cvs, use_news, 
-#			type, use_docman, 
-#			new_task_address, send_all_tasks,
-#			use_pm_depend_box)
-# 	    VALUES ($newsadmin_groupid, 'Site News Admin', '$domain_name/news/', 0, 'A', 'newsadmin', 'shell1',
-#			NULL, NULL, 'cvs1', 'website', NULL,
-#			NULL, 0, 0, 1, 0,
-#			0, 0, 0, 1,
-#			1, 0,
-#			'', 0,
-#			0)",
-#TODO       "UPDATE groups SET homepage = '$domain_name/news/' where group_id = '3'",
-#DONE 	    "INSERT INTO users (user_id, user_name, email, user_pw)  
-# 		    VALUES (100,'None','$noreplymail','*********')", 
-#TODO       "UPDATE users SET email = '$noreplymail' where user_id = '100'",
-#TODO       "INSERT INTO users VALUES (101,'$login','$email','$md5pwd','Sourceforge admin','A','/bin/bash','','N',2000,'$shellbox',$date,'',1,0,NULL,NULL,0,'','GMT', 1, 0)", 
-#TODO       "INSERT INTO user_group (user_id, group_id, admin_flags) VALUES (101, 1, 'A')",
-#TODO       "INSERT INTO user_group (user_id, group_id, admin_flags) VALUES (101, $newsadmin_groupid, 'A')",
-#NOMORE     "INSERT INTO bug_category (bug_category_id, group_id, category_name) VALUES (100,1,'None')",
-#NOMORE	    "INSERT INTO bug_group (bug_group_id, group_id, group_name) VALUES (100,1,'None')",
-# 	    "INSERT INTO bug (bug_id,group_id,status_id,category_id,bug_group_id,submitted_by,assigned_to,resolution_id)
-# 		    VALUES (100,1,100,100,100,100,100,100)",
-# 	    "INSERT INTO patch_category (patch_category_id, group_id, category_name) VALUES (100,1,'None')",
-# 	    "INSERT INTO patch (group_id,patch_status_id,patch_category_id,submitted_by,assigned_to)
-# 		    VALUES (1,100,100,100,100)",
-#DONE 	    "INSERT INTO project_group_list (group_project_id,group_id) VALUES (1,1)",
-#DONE 	    "INSERT INTO project_task (group_project_id,created_by,status_id)
-# 		    VALUES (1,100,100)",
-#NOMORE	    "INSERT INTO support_category VALUES ('100','1','None')"
-# 		    ) ;
-
- 	debug "Committing." ;
- 	$dbh->commit () ;
 
  	@reqlist = (
-            "UPDATE groups SET homepage = '$domain_name/admin/' where group_id = '1'",
-            "UPDATE groups SET homepage = '$domain_name/news/' where group_id = '2'",
-            "UPDATE groups SET homepage = '$domain_name/stats/' where group_id = '3'",
-            "UPDATE groups SET homepage = '$domain_name/peerrating/' where group_id = '4'",
-            "UPDATE users SET email = '$noreplymail' where user_id = '100'",
+            "UPDATE groups SET homepage = '$domain_name/admin/' where group_id = 1",
+            "UPDATE groups SET homepage = '$domain_name/news/' where group_id = 2",
+            "UPDATE groups SET homepage = '$domain_name/stats/' where group_id = 3",
+            "UPDATE groups SET homepage = '$domain_name/peerrating/' where group_id = 4",
+            "UPDATE users SET email = '$noreplymail' where user_id = 100",
  	    "INSERT INTO users VALUES (101,'$login','$email','$md5pwd','Sourceforge admin','A','/bin/bash','','N',2000,'$shellbox',$date,'',1,0,NULL,NULL,0,'','GMT', 1, 0)", 
             "SELECT setval ('\"users_pk_seq\"', 102, 'f')",
  	    "INSERT INTO user_group (user_id, group_id, admin_flags) VALUES (101, 1, 'A')",
@@ -166,23 +114,6 @@ eval {
  	}
 	@reqlist = () ;
 
-#	debug "Initialising sequences." ;
-#
-#	@filelist = qw{ /usr/lib/sourceforge/db/init-sequences.sql } ;
-#			      
-#	foreach my $file (@filelist) {
-#	    debug "Processing $file" ;
-#	    @reqlist = @{ &parse_sql_file ($file) } ;
-#	    
-# 	    foreach my $s (@reqlist) {
-# 		$query = $s ;
-#  		$sth = $dbh->prepare ($query) ;
-#  		$sth->execute () ;
-#  		$sth->finish () ;
-# 	    }
-# 	} 
-#	@reqlist = () ;
-#
 	debug "Inserting skills." ;
 
 	foreach my $skill (split /;/, $skill_list) {
@@ -198,78 +129,72 @@ eval {
  	}
 	@reqlist = () ;
 
+	&update_db_version ("2.6-0") ;
  	debug "Committing." ;
  	$dbh->commit () ;
     } else {
 	$action = "upgrade" ;
+
+	&create_metadata_table ('2.5-7+just+before+8') ;
+ 	debug "Committing." ;
+ 	$dbh->commit () ;
     }
 
-#    # Do we have the metadata table?
-#
-#    $query = "SELECT count(*) from pg_class where relname = 'debian_meta_data'";
-#    $sth = $dbh->prepare ($query) ;
-#    $sth->execute () ;
-#    @array = $sth->fetchrow_array () ;
-#    $sth->finish () ;
-#
-#    # Let's create this table if we have it not
-#
-#    if ($array [0] == 0) {
-#	debug "Creating debian_meta_data table." ;
-#	$query = "CREATE TABLE debian_meta_data (key varchar primary key, value text not null)" ;
-#	$sth = $dbh->prepare ($query) ;
-#	$sth->execute () ;
-#	$sth->finish () ;
-#	
-#	# Now table should exist, let's enter its first value in it
-#
-#	debug "Inserting first data into debian_meta_data table." ;
-#	$query = "INSERT INTO debian_meta_data (key, value) VALUES ('db-version', '2.5-7+just+before+8')" ;
-#	$sth = $dbh->prepare ($query) ;
-#	$sth->execute () ;
-#	$sth->finish () ;
-#
-#	debug "Committing." ;
-#	$dbh->commit () ;
-#    }
-#
-#    # Now we have the metadata table with at least the "db-version" key
-#    # We can continue our work based on the associated value
-#    
-#    $query = "select value from debian_meta_data where key = 'db-version'" ;
-#    $sth = $dbh->prepare ($query) ;
-#    $sth->execute () ;
-#    @array = $sth->fetchrow_array () ;
-#    $sth->finish () ;
-#    
-#    $version = $array [0] ;
-#
-#    # $version is the last successfully installed version
-#    
-#    if (is_lesser $version, "2.5-8") {
-#	debug "Found version $version lesser than 2.5-8, adding row to people_job_category." ;
-#	$query = "INSERT INTO people_job_category VALUES (100, 'Undefined', 0)" ;
-#	$sth = $dbh->prepare ($query) ;
-#	$sth->execute () ;
-#	$sth->finish () ;
-#
-#	debug "Updating debian_meta_data table." ;
-#	$query = "UPDATE debian_meta_data SET value = '2.5-8' where key = 'db-version'" ;
-#	$sth = $dbh->prepare ($query) ;
-#	$sth->execute () ;
-#	$sth->finish () ;
-#
-#	debug "Committing." ;
-#	$dbh->commit () ;
-#    }
-#
-#    debug "It seems your database $action went well and smoothly.  That's cool." ;
-#    debug "Please enjoy using Debian Sourceforge." ;
-#    
-#    # There should be a commit at the end of every block above.
-#    # If there is not, then it might be symptomatic of a problem.
-#    # For safety, we roll back.
-#    $dbh->rollback ();
+    # At this point we have the metadata table with at least the "db-version" key
+    # We can continue our work based on the associated value
+    
+    $version = &get_db_version ;
+    
+    if (is_lesser $version, "2.5.9999.1+data+upgraded") {
+	debug "Upgrading your database scheme from 2.5" ;
+
+	@reqlist = @{ &parse_sql_file ("/usr/lib/sourceforge/db/sf2.5-to-sf2.6.sql") } ;
+	foreach my $s (@reqlist) {
+	    $query = $s ;
+	    # debug $query ;
+	    $sth = $dbh->prepare ($query) ;
+	    $sth->execute () ;
+	    $sth->finish () ;
+	}
+	@reqlist = () ;
+
+	&update_db_version ("2.5.9999.1+data+upgraded") ;
+ 	debug "Committing." ;
+ 	$dbh->commit () ;
+    }
+
+    if (is_lesser $version, "2.5.9999.2+artifact+transcoded") {
+	debug "Transcoding the artifact data fields" ;
+
+	$query = "SELECT id,bin_data FROM artifact_file ORDER BY id ASC" ;
+	# debug $query ;
+	$sth = $dbh->prepare ($query) ;
+	$sth->execute () ;
+	while (@array = $sth->fetchrow_array) {
+	    my $query2 = "UPDATE artifact_file SET bin_data='" ;
+	    $query2 .= encode_base64 (decode_entities ($array [1])) ;
+	    $query2 .= "' WHERE id=" ;
+	    $query2 .= $array [0] ;
+	    $query2 .= "" ;
+	    # debug $query2 ;
+	    my $sth2 =$dbh->prepare ($query2) ;
+	    $sth2->execute () ;
+	    $sth2->finish () ;
+	}
+	$sth->finish () ;
+
+	&update_db_version ("2.5.9999.2+artifact+transcoded") ;
+	debug "Committing." ;
+	$dbh->commit () ;
+    }
+
+    debug "It seems your database $action went well and smoothly.  That's cool." ;
+    debug "Please enjoy using Debian Sourceforge." ;
+    
+    # There should be a commit at the end of every block above.
+    # If there is not, then it might be symptomatic of a problem.
+    # For safety, we roll back.
+    $dbh->rollback ();
 };
 
 if ($@) {
@@ -337,8 +262,10 @@ sub parse_sql_file ( $ ) {
     # my $n = 0 ;
     
   STATE_LOOP: while ($state != $states{DONE}) { # State machine main loop
+      # debug "STATE_LOOP: state = $state" ;
     STATE_SWITCH: {		# State machine step processing
 	$state == $states{INIT} && do {
+	    # debug "State = INIT" ;
 	    $par_level = 0 ;
 	    $l = $sql = $chunk = $rest = "" ;	 
 	    @sql_list = () ;
@@ -351,6 +278,7 @@ sub parse_sql_file ( $ ) {
 	} ;			# End of INIT state
 	
 	$state == $states{SCAN} && do {
+	    # debug "State = SCAN" ;
 	  SCAN_STATE_SWITCH: {
 	      ( ($l eq "") or ($l =~ /^\s*$/) or ($l =~ /^--/) ) && do {
 		  $l = <F> ;
@@ -383,6 +311,7 @@ sub parse_sql_file ( $ ) {
 	} ;			# End of SCAN state
 	
 	$state == $states{SQL_SCAN} && do {
+	    # debug "State = SQL_SCAN" ;
 	  SQL_SCAN_STATE_SWITCH: {
 	      ( ($l eq "") or ($l =~ /^\s*$/) or ($l =~ /^--/) ) && do {
 		  $l = <F> ;
@@ -410,6 +339,7 @@ sub parse_sql_file ( $ ) {
 	} ;			# End of SQL_SCAN state
 	
 	$state == $states{IN_SQL} && do {
+	    # debug "State = IN_SQL" ;
 	  IN_SQL_STATE_SWITCH: {
 	      ($rest =~ /^\(/) && do {
 		  $par_level += 1 ;
@@ -495,6 +425,7 @@ sub parse_sql_file ( $ ) {
 	} ;			# End of IN_SQL state
 
 	$state == $states{END_SQL} && do {
+	    # debug "State = END_SQL" ;
 	  END_SQL_STATE_SWITCH: {
 	      ($sql =~ /^\s*$/) && do {
 		  $sql = "" ;
@@ -518,8 +449,9 @@ sub parse_sql_file ( $ ) {
 	} ;			# End of END_SQL state
 
 	$state == $states{QUOTE_SCAN} && do {
+	    # debug "State = QUOTE_SCAN" ;
 	  QUOTE_SCAN_STATE_SWITCH: {
-	      ($l eq "") && do {
+	      ($rest eq "") && do {
 		  $sql .= "\n" ;
 		  $l = <F> ;
 		  unless ($l) {
@@ -528,12 +460,15 @@ sub parse_sql_file ( $ ) {
 		      last QUOTE_SCAN_STATE_SWITCH ;
 		  }
 		  chomp $l ;
+		  $rest = $l ;
 		  
 		  last QUOTE_SCAN_STATE_SWITCH ;
 	      } ;
 
 	      ( 1 ) && do {
 		  ($chunk, $rest) = ($l =~ /^([^\\\']*)(.*)/) ;
+		  # debug "chunk = $chunk" ;
+		  # debug "rest = $rest" ;
 		  $sql .= $chunk ;
 		  
 		  $state = $states{IN_QUOTE} ;
@@ -545,6 +480,7 @@ sub parse_sql_file ( $ ) {
 	} ;			# End of QUOTE_SCAN state
 	
 	$state == $states{IN_QUOTE} && do {
+	    # debug "State = IN_QUOTE" ;
 	  IN_QUOTE_STATE_SWITCH: {
 	      ($rest =~ /^\'/) && do {
 		  $sql .= '\'' ;
@@ -569,6 +505,13 @@ sub parse_sql_file ( $ ) {
 		  last IN_QUOTE_STATE_SWITCH ;
 	      } ;
 
+	      ($rest =~ /^\\$/) && do {
+		  $sql .= "\n" ;
+		  $rest = substr $rest, 1 ;
+		  
+		  last IN_QUOTE_STATE_SWITCH ;
+	      } ;
+
 	      ( 1 ) && do {
 		  $l = $rest ;
 		  
@@ -581,6 +524,7 @@ sub parse_sql_file ( $ ) {
 	} ;			# End of IN_QUOTE state
 
 	$state == $states{START_COPY} && do {
+	    # debug "State = START_COPY" ;
 	  START_COPY_STATE_SWITCH: {
 	      ($l =~ m/\s*copy\s+\"[\w_]+\"\s+from\s+stdin\s*;/i) && do {
 		  ($copy_table, $copy_rest) = ($l =~ /\s*copy\s+\"([\w_]+)\"\s+from\s+stdin\s*;(.*)/i) ;
@@ -621,6 +565,7 @@ sub parse_sql_file ( $ ) {
 	} ;			# End of START_COPY state
 
 	$state == $states{IN_COPY} && do {
+	    # debug "State = IN_COPY" ;
 	  IN_COPY_STATE_SWITCH: {
 	      ($l =~ /^\\\.$/) && do {
 		  $l = $copy_rest ;
@@ -661,10 +606,12 @@ sub parse_sql_file ( $ ) {
 	} ;			# End of IN_COPY state
 
 	$state == $states{DONE} && do {
+	    # debug "State = DONE" ;
 	    last STATE_SWITCH ;
 	} ;			# End of DONE state
 
 	$state == $states{ERROR} && do {
+	    # debug "State = ERROR" ;
 	    debug "Reached the ERROR state.  Dying." ;
 	    die "State machine is buggy." ;
 	    
@@ -682,4 +629,69 @@ sub parse_sql_file ( $ ) {
 
     close F ;
     return \@sql_list ;
+}
+
+sub create_metadata_table ( $ ) {
+    my $v = shift || "2.5-7+just+before+8" ;
+    # Do we have the metadata table?
+
+    my $query = "SELECT count(*) from pg_class where relname = 'debian_meta_data'";
+    # debug $query ;
+    my $sth = $dbh->prepare ($query) ;
+    $sth->execute () ;
+    my @array = $sth->fetchrow_array () ;
+    $sth->finish () ;
+
+    # Let's create this table if we have it not
+
+    if ($array [0] == 0) {
+	debug "Creating debian_meta_data table." ;
+	$query = "CREATE TABLE debian_meta_data (key varchar primary key, value text not null)" ;
+	# debug $query ;
+	$sth = $dbh->prepare ($query) ;
+	$sth->execute () ;
+	$sth->finish () ;
+    }
+	
+    $query = "SELECT count(*) from debian_meta_data where key = 'db-version'";
+    # debug $query ;
+    $sth = $dbh->prepare ($query) ;
+    $sth->execute () ;
+    @array = $sth->fetchrow_array () ;
+    $sth->finish () ;
+
+    # Empty table?  We'll have to fill it up a bit
+
+    if ($array [0] == 0) {
+	debug "Inserting first data into debian_meta_data table." ;
+	$query = "INSERT INTO debian_meta_data (key, value) VALUES ('db-version', '$v')" ;
+	# debug $query ;
+	$sth = $dbh->prepare ($query) ;
+	$sth->execute () ;
+	$sth->finish () ;
+    }
+}
+
+sub update_db_version ( $ ) {
+    my $v = shift or die "Not enough arguments" ;
+
+    debug "Updating debian_meta_data table." ;
+    my $query = "UPDATE debian_meta_data SET value = '$v' where key = 'db-version'" ;
+    # debug $query ;
+    my $sth = $dbh->prepare ($query) ;
+    $sth->execute () ;
+    $sth->finish () ;
+}
+
+sub get_db_version () {
+    my $query = "select value from debian_meta_data where key = 'db-version'" ;
+    # debug $query ;
+    my $sth = $dbh->prepare ($query) ;
+    $sth->execute () ;
+    my @array = $sth->fetchrow_array () ;
+    $sth->finish () ;
+    
+    my $version = $array [0] ;
+
+    return $version ;
 }
